# werkflow

./: LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: werkflow.yml
examples/: basic_werkflow.py
werkflow/: __init__.py
werkflow/cli/: __init__.py  base.py  run.py  setup.py  workflow.py
werkflow/cli/exceptions/: __init__.py  empty_workflow_file_error.py  multiple_workflows_violation_error.py
werkflow/cli/import_tools/: workflow.py
werkflow/cli/signals/: __init__.py  abort.py
werkflow/connections/encryption/: aes_gcm.py
werkflow/env/: __init__.py  env.py  load_env.py
werkflow/graph/: __init__.py  graph.py  workflow.py  workflow_group.py
werkflow/graph/exceptions/: __init__.py  step_timeout_error.py
werkflow/hooks/: __init__.py
werkflow/hooks/prompt/exceptions/: __init__.py  invalid_prompt_error.py
werkflow/hooks/types/base/: base_hook.py  hook_types.py  registrar.py
werkflow/hooks/types/requires/: decorator.py  validator.py
werkflow/hooks/types/step/: decorator.py  hook.py  validator.py
werkflow/logging/: __init__.py  werkflow_logger.py
werkflow/logging/config/: logging_config.py
werkflow/logging/logger_types/: async_filesystem_logger.py  async_spinner.py  logger.py  logger_types.py  logger_types_map.py  sync_filesystem_logger.py
werkflow/logging/logger_types/handlers/: async_file_handler.py
werkflow/logging/spinner/: progress_text.py
werkflow/modules/: __init__.py
werkflow/modules/exceptions/: __init__.py  missing_module_error.py
werkflow/modules/file/: file.py
werkflow/modules/python/: python.py
werkflow/modules/shell/: shell.py
werkflow/modules/system/: system.py
werkflow/prompt/: __init__.py
(+36 files in other folders)
